--- a/index.html
+++ b/index.html
@@ -372,10 +372,6 @@
                 white-space: nowrap;
             }
 
-            #scale-controls select {
-                font-size: 11px;
-            }
-
             /* Morph slider */
             #morph-control {
                 display: flex;
@@ -605,43 +601,92 @@
             }
 
             /* ============================================================
-           SELECT/DROPDOWN STYLING
+           CUSTOM DROPDOWN STYLING
            ============================================================ */
-            select {
-                -webkit-appearance: none;
-                -moz-appearance: none;
-                appearance: none;
+            .custom-select {
+                position: relative;
+                display: inline-block;
+            }
+
+            .custom-select-trigger {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                gap: 8px;
                 background-color: var(--bg);
                 border: 1px solid var(--border);
                 color: var(--text);
-                padding: 4px 24px 4px 8px;
+                padding: 4px 8px;
                 font-family: var(--font-mono);
                 font-size: 10px;
                 cursor: pointer;
-                border-radius: 0;
-                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cpath fill='%23666' d='M0 2l4 4 4-4z'/%3E%3C/svg%3E");
-                background-repeat: no-repeat;
-                background-position: right 8px center;
-                background-size: 8px;
+                min-width: 80px;
+                user-select: none;
             }
 
-            .light-mode select {
-                background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='0 0 8 8'%3E%3Cpath fill='%23888' d='M0 2l4 4 4-4z'/%3E%3C/svg%3E");
-            }
-
-            select:hover {
+            .custom-select-trigger:hover {
                 border-color: var(--text-muted);
             }
 
-            select:focus {
-                outline: none;
+            .custom-select.open .custom-select-trigger {
                 border-color: var(--text);
             }
 
-            select option {
+            .custom-select-arrow {
+                width: 8px;
+                height: 8px;
+                flex-shrink: 0;
+            }
+
+            .custom-select-arrow svg {
+                display: block;
+                width: 100%;
+                height: 100%;
+                fill: var(--text-muted);
+            }
+
+            .custom-select.open .custom-select-arrow svg {
+                transform: rotate(180deg);
+            }
+
+            .custom-select-options {
+                position: absolute;
+                top: 100%;
+                left: 0;
+                right: 0;
+                margin-top: 2px;
                 background: var(--bg);
+                border: 1px solid var(--border);
+                max-height: 200px;
+                overflow-y: auto;
+                z-index: 1000;
+                display: none;
+            }
+
+            .custom-select.open .custom-select-options {
+                display: block;
+            }
+
+            .custom-select-option {
+                padding: 6px 8px;
+                font-size: 10px;
+                cursor: pointer;
                 color: var(--text);
-                padding: 4px 8px;
+            }
+
+            .custom-select-option:hover {
+                background: var(--border);
+            }
+
+            .custom-select-option.selected {
+                background: var(--border);
+            }
+
+            /* Hide native select when using custom */
+            .custom-select select {
+                position: absolute;
+                opacity: 0;
+                pointer-events: none;
             }
 
             /* ============================================================
@@ -2990,6 +3035,202 @@
             }
 
             // ============================================================
+            // CUSTOM SELECT DROPDOWN
+            // ============================================================
+            class CustomSelect {
+                constructor(selectElement) {
+                    this.select = selectElement;
+                    this.wrapper = null;
+                    this.trigger = null;
+                    this.optionsList = null;
+                    this.isOpen = false;
+
+                    this.build();
+                    this.bindEvents();
+                }
+
+                build() {
+                    // Create wrapper
+                    this.wrapper = document.createElement("div");
+                    this.wrapper.className = "custom-select";
+
+                    // Create trigger button
+                    this.trigger = document.createElement("div");
+                    this.trigger.className = "custom-select-trigger";
+
+                    const selectedText = document.createElement("span");
+                    selectedText.className = "custom-select-value";
+                    selectedText.textContent =
+                        this.select.options[this.select.selectedIndex]?.text ||
+                        "";
+
+                    const arrow = document.createElement("span");
+                    arrow.className = "custom-select-arrow";
+                    arrow.innerHTML =
+                        '<svg viewBox="0 0 8 8"><path d="M0 2l4 4 4-4z"/></svg>';
+
+                    this.trigger.appendChild(selectedText);
+                    this.trigger.appendChild(arrow);
+
+                    // Create options list
+                    this.optionsList = document.createElement("div");
+                    this.optionsList.className = "custom-select-options";
+
+                    Array.from(this.select.options).forEach((option, index) => {
+                        const optionEl = document.createElement("div");
+                        optionEl.className = "custom-select-option";
+                        if (index === this.select.selectedIndex) {
+                            optionEl.classList.add("selected");
+                        }
+                        optionEl.textContent = option.text;
+                        optionEl.dataset.value = option.value;
+                        optionEl.dataset.index = index;
+                        this.optionsList.appendChild(optionEl);
+                    });
+
+                    // Wrap the original select
+                    this.select.parentNode.insertBefore(
+                        this.wrapper,
+                        this.select,
+                    );
+                    this.wrapper.appendChild(this.trigger);
+                    this.wrapper.appendChild(this.optionsList);
+                    this.wrapper.appendChild(this.select);
+                }
+
+                bindEvents() {
+                    // Toggle on trigger click
+                    this.trigger.addEventListener("click", (e) => {
+                        e.stopPropagation();
+                        this.toggle();
+                    });
+
+                    // Select option on click
+                    this.optionsList.addEventListener("click", (e) => {
+                        const option = e.target.closest(
+                            ".custom-select-option",
+                        );
+                        if (option) {
+                            this.selectOption(parseInt(option.dataset.index));
+                        }
+                    });
+
+                    // Close on outside click
+                    document.addEventListener("click", (e) => {
+                        if (!this.wrapper.contains(e.target)) {
+                            this.close();
+                        }
+                    });
+
+                    // Keyboard navigation
+                    this.wrapper.addEventListener("keydown", (e) => {
+                        if (e.key === "Enter" || e.key === " ") {
+                            e.preventDefault();
+                            this.toggle();
+                        } else if (e.key === "Escape") {
+                            this.close();
+                        } else if (e.key === "ArrowDown") {
+                            e.preventDefault();
+                            this.navigateOptions(1);
+                        } else if (e.key === "ArrowUp") {
+                            e.preventDefault();
+                            this.navigateOptions(-1);
+                        }
+                    });
+
+                    // Sync if select changes programmatically
+                    this.select.addEventListener("change", () => {
+                        this.syncFromSelect();
+                    });
+                }
+
+                toggle() {
+                    this.isOpen ? this.close() : this.open();
+                }
+
+                open() {
+                    this.isOpen = true;
+                    this.wrapper.classList.add("open");
+                }
+
+                close() {
+                    this.isOpen = false;
+                    this.wrapper.classList.remove("open");
+                }
+
+                selectOption(index) {
+                    // Update native select
+                    this.select.selectedIndex = index;
+                    this.select.dispatchEvent(
+                        new Event("change", { bubbles: true }),
+                    );
+
+                    // Update display
+                    this.syncFromSelect();
+                    this.close();
+                }
+
+                syncFromSelect() {
+                    const selectedOption =
+                        this.select.options[this.select.selectedIndex];
+                    if (selectedOption) {
+                        this.trigger.querySelector(
+                            ".custom-select-value",
+                        ).textContent = selectedOption.text;
+
+                        // Update selected class
+                        this.optionsList
+                            .querySelectorAll(".custom-select-option")
+                            .forEach((opt, i) => {
+                                opt.classList.toggle(
+                                    "selected",
+                                    i === this.select.selectedIndex,
+                                );
+                            });
+                    }
+                }
+
+                navigateOptions(direction) {
+                    if (!this.isOpen) {
+                        this.open();
+                        return;
+                    }
+
+                    let newIndex = this.select.selectedIndex + direction;
+                    if (newIndex < 0) newIndex = this.select.options.length - 1;
+                    if (newIndex >= this.select.options.length) newIndex = 0;
+
+                    this.selectOption(newIndex);
+                }
+
+                // Rebuild options (e.g., if options change dynamically)
+                refresh() {
+                    this.optionsList.innerHTML = "";
+                    Array.from(this.select.options).forEach((option, index) => {
+                        const optionEl = document.createElement("div");
+                        optionEl.className = "custom-select-option";
+                        if (index === this.select.selectedIndex) {
+                            optionEl.classList.add("selected");
+                        }
+                        optionEl.textContent = option.text;
+                        optionEl.dataset.value = option.value;
+                        optionEl.dataset.index = index;
+                        this.optionsList.appendChild(optionEl);
+                    });
+                    this.syncFromSelect();
+                }
+            }
+
+            // Initialize all custom selects
+            function initCustomSelects() {
+                document
+                    .querySelectorAll("select:not(.custom-select select)")
+                    .forEach((select) => {
+                        new CustomSelect(select);
+                    });
+            }
+
+            // ============================================================
             // SCALE MANAGER
             // ============================================================
             class ScaleManager {
@@ -3460,6 +3701,9 @@
                         document.getElementById("morph-value").textContent =
                             value.toFixed(2);
                     });
+
+                    // Initialize custom styled dropdowns
+                    initCustomSelects();
 
                     // Bind UI controls
                     this.bindControls();
