fix: rename MW to Mod Wheel in dropdown

--- a/index.html
+++ b/index.html
@@ -972,7 +972,7 @@
                         <option value="lfo">LFO</option>
                         <option value="snh">S&H</option>
                         <option value="drift">Drift</option>
-                        <option value="midi-wheel">MW</option>
+                        <option value="midi-wheel">Mod Wheel</option>
                         <option value="midi-velocity">Vel</option>
                     </select>
                     <input
