fix: convert all tooltips to CSS tooltips and fix dropdown height
- Replace native title attributes with data-tooltip throughout
- Affected: My location, Reset view, Rate, Range, Offset, Play/Pause
- Fix custom select trigger padding (4px → 6px) to match adjacent elements

--- a/index.html
+++ b/index.html
@@ -638,7 +638,7 @@
                 background-color: var(--bg);
                 border: 1px solid var(--border);
                 color: var(--text);
-                padding: 4px 8px;
+                padding: 6px 8px;
                 font-family: var(--font-mono);
                 font-size: 10px;
                 cursor: pointer;
@@ -920,7 +920,7 @@
                         <button
                             id="location-btn"
                             class="location-btn"
-                            title="Use my location"
+                            data-tooltip="My location"
                         >
                             <svg
                                 viewBox="0 0 24 24"
@@ -954,7 +954,7 @@
                         </div>
                         <canvas id="terrain-canvas"></canvas>
                         <div class="terrain-controls">
-                            <button id="reset-view" title="Reset camera view">
+                            <button id="reset-view" data-tooltip="Reset view">
                                 <svg
                                     width="14"
                                     height="14"
@@ -1045,7 +1045,7 @@
                         max="10"
                         step="0.1"
                         value="1"
-                        title="Modulation Rate (Hz)"
+                        data-tooltip="Rate (Hz)"
                     />
                     <span class="mod-rate-value" id="morph-mod-rate-value"
                         >1.0</span
@@ -1059,7 +1059,7 @@
                             max="1"
                             step="0.01"
                             value="1"
-                            title="Modulation Range"
+                            data-tooltip="Range"
                         />
                     </div>
                     <div class="mod-range-group">
@@ -1071,7 +1071,7 @@
                             max="1"
                             step="0.01"
                             value="0"
-                            title="Modulation Offset"
+                            data-tooltip="Offset"
                         />
                     </div>
                 </div>
@@ -1142,7 +1142,7 @@
                         <button
                             id="gen-play-btn"
                             class="play-btn"
-                            title="Play/Pause"
+                            data-tooltip="Play/Pause"
                         >
                             <svg
                                 id="gen-play-icon"
