--- a/index.html
+++ b/index.html
@@ -63,17 +63,16 @@
             #app {
                 display: flex;
                 flex-direction: column;
-                height: 100vh;
+                min-height: 100vh;
                 max-width: 1400px;
                 margin: 0 auto;
                 padding: 16px;
                 gap: 8px;
-                overflow-y: auto;
             }
 
             main {
-                flex: 1;
-                min-height: 300px;
+                flex: 0 0 auto;
+                height: 400px;
             }
 
             /* ============================================================
