--- a/index.html
+++ b/index.html
@@ -169,6 +169,7 @@
                 padding: 6px 10px;
                 font-family: inherit;
                 font-size: 11px;
+                height: 32px;
             }
 
             .map-search input::placeholder {
@@ -190,6 +191,7 @@
                 cursor: pointer;
                 text-transform: uppercase;
                 letter-spacing: 0.05em;
+                height: 32px;
             }
 
             .map-search button:hover {
@@ -675,6 +677,7 @@
                 font-size: 10px;
                 cursor: pointer;
                 min-width: 80px;
+                height: 32px;
                 user-select: none;
             }
 
