fix: apply background color directly in light-mode class
- Ensures body background updates when light-mode is applied
- Fixes black background showing below the fold in light mode

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                 --text: #000000;
                 --text-muted: #888888;
                 --accent: #000000;
+                background: var(--bg);
             }
 
             /* ============================================================
